# ctc-detect

./: .coverage  .gitignore  CONTEXT.md  Dockerfile  HOWTO_ONBOARD.md  METHODS.md  Makefile  README.md  SECURITY.md  benchmark_batch.py  benchmark_data_access.py  benchmark_inference.py  benchmark_quick.py  ctc_detect_colab (1).ipynb  evaluate_final.py  evaluate_model.py  generate_report.py  pyproject.toml  requirements.txt  run_stress_test.sh  stress_test.py  stress_test_v3.py  stress_test_v4.py  stress_test_v5.py  tokenization_report.md  tokenize_data.py  verify_env.py
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: gene_mapping.yaml  inference.yaml  normalize.yaml  output.yaml  preprocess.yaml  qc.yaml  tokenize.yaml  umap.yaml
data/processed/: preprocessing_report.md  splits.json
data/processed/tokenized/test/: state.json
data/processed/tokenized/train/: state.json
data/processed/tokenized/val/: state.json
data/processed/tokenized_pbmc_10k/: state.json
data/raw/: data_provenance.md
notebooks/: ctc_detect_colab.ipynb
results/: stress_test_report.md  validation_report.md
results/checkpoints/best_model/: adapter_config.json
results/test_outputs/: id_class_dict.pkl  metrics.json  test1_pbmc_raw_scores.npy  test1_pbmc_scores.npy  test_epcam_status.npy  test_labels.npy  test_scores.npy  test_scores_raw.npy
results/test_outputs/test2_ctc_test_tokenized/: state.json
results/test_outputs/test3_tokenized_epcam_high/: data-00000-of-00001.arrow  state.json
results/test_outputs/test3_tokenized_epcam_low/: state.json
results/test_outputs/test4_tokenized_szczerba/: data-00000-of-00001.arrow  dataset_info.json  state.json
scripts/: combine_training_datasets.py  merge_per_cell_files.py  onboard_new_dataset.py  prepare_external_dataset.py  stats_test.py
src/ctcdetect/: __init__.py  config.py  detect.py  evaluate.py  exceptions.py  extensions.py  main.py  preprocess.py  report.py  utils.py  visualize.py
src/ctcdetect/cli/: __init__.py  app.py  utils.py
src/ctcdetect/cli/commands/: __init__.py  batch.py  evaluate.py  info.py  model.py  onboard.py  run.py  validate.py
src/ctcdetect/config/: __init__.py  loader.py  paths.py  registry.py  schemas.py  system.py
src/ctcdetect/core/: __init__.py  detect.py  model.py  pipeline.py  preprocess.py
src/ctcdetect/evaluation/: __init__.py  metrics.py  plots.py  reports.py
src/ctcdetect/scripts/: combine_training_datasets.py  eval_report.py  merge_per_cell_files.py  onboard_new_dataset.py  prepare_external_dataset.py  run_and_eval.py
src/ctcdetect/training/: __init__.py  data.py  trainer.py
tests/: conftest.py  test_config.py  test_coverage_boost.py  test_detect.py  test_detect_gating.py  test_eval_report.py  test_evaluate.py  test_extra.py  test_main.py  test_main_mocked.py  test_preprocess.py  test_report.py  test_utils.py  test_visualize.py
tests/unit/: test_coverage_boost.py
tests/unit/cli/: test_extra.py  test_main.py  test_main_mocked.py  test_utils.py
tests/unit/config/: test_config.py
tests/unit/core/: test_detect.py  test_detect_gating.py  test_preprocess.py
tests/unit/evaluation/: test_eval_report.py  test_evaluate.py  test_report.py  test_visualize.py
