[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctc-detect"
version = "0.1.0"
description = "Geneformer-based circulating tumor cell (CTC) detection from single-cell RNA-seq data"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
ctc-detect = "ctcdetect.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctcdetect*"]
