[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctc-detect"
version = "0.1.0"
description = "Geneformer-based circulating tumor cell (CTC) detection from single-cell RNA-seq data"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "scanpy>=1.11.5",
    "scikit-misc>=0.5.2",
    "torch>=2.3.0",
    "transformers==5.14.0",
    "peft==0.11.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "umap-learn>=0.5.12",
    "pyensembl>=2.10.1",
]

[project.scripts]
ctc-detect = "ctcdetect.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctcdetect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=ctcdetect --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["ctcdetect"]
omit = [
    "tests/*",
    "src/ctcdetect/detect.py",
    "src/ctcdetect/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
