[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctc-detect"
version = "0.1.0"
description = "Geneformer-based circulating tumor cell (CTC) detection from single-cell RNA-seq data"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "scanpy>=1.11.5",
    "scikit-misc>=0.5.2",
    "torch>=2.3.0",
    "transformers==4.41.0",
    "peft==0.11.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "umap-learn>=0.5.12",
    "pyensembl>=2.10.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "huggingface_hub>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
    "mypy>=1.9.0",
]

[project.scripts]
ctc-detect = "ctcdetect.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctcdetect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=ctcdetect --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["ctcdetect"]
omit = [
    "tests/*",
    "src/ctcdetect/*.bak",
    "src/ctcdetect/__pycache__/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true